[package]
name = "rust"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
dotenv = "0.15.0"
uuid = {version = "1.19.0", features = ["v4", "fast-rng"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.34"
borsh = {version = "1.6.0", features = ["derive"]}
